Se corriguio el index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="add-modal modal">
         <form class="form-modal-container">
-            <h2>Agregar tarea detallada</h2>
+            <h2>Agregar tarea</h2>
             <div>
                 <label for="add-input">Nombre de tarea <span class="asterisco">*</span></label>
                 <input type="text" name="" id="add-input" class="data-form" autocomplete="off" required>
