--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
     </div>
     <div class="confirm-modal-complete modal">
         <div class="confirm-container-complete confirm-modal modal-animation">
+            <img src="check.png" alt="">
             <h1>¿Seguro que deseas completar esta tarea?</h1>
             <div>
                 <button class="btn-complete-cancel btn-cancel-modal">Cancelar</button>
@@ -92,6 +93,7 @@
     </div>
     <div class="confirm-modal-delete  modal">
         <div class="confirm-container-delete confirm-modal modal-animation">
+            <img src="delete.png" alt="">
             <h1>¿Seguro que deseas eliminar esta tarea?</h1>
             <div>
                 <button class="btn-delete-cancel btn-cancel-modal">Cancelar</button>
