Correccion de index.html

--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
         <form class="form-modal-container edit-form modal-animation">
             <h2>Editar tarea</h2>
             <div>
-                <label for="add-input">Titulo</label>
+                <label for="add-input-edit">Titulo</label>
                 <input type="text" name="" id="add-input-edit" class="data-form" autocomplete="off" required>
             </div>
             <div>
-                <label for="descripcion-input">Descripcion</label>
+                <label for="descripcion-input-edit">Descripcion</label>
                 <textarea name="" id="descripcion-input-edit"class="data-form" ></textarea>
             </div>
             <div>
-                <label for="date-input">Agregar recordatorio</label>
+                <label for="date-input-edit">Agregar recordatorio</label>
                 <input type="datetime-local" name="" id="date-input-edit" class="data-form" min="">
             </div>
             <div class="btns-form">
